- fixed spacing and sizes

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     margin: auto;
     width: 75%;
     min-height: 5vh;
-    padding: 1rem;
+    padding: 2rem;
     border: 2px solid;
     border-radius:0.5rem;
     max-width: 50rem;
@@ -66,7 +66,7 @@ h3 {
     margin-top: 3rem;
     margin-left: -20px;
     margin-right: -20px;
-    padding: 2rem;
+    padding: 1.5rem 3rem;
     background-color:#FCD34D;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
